# Parser-Images

./: .gitignore  LICENSE  README.md  pyproject.toml
.github/workflows/: release.yml
docs/: CHANGELOG.md  USAGE.md
scripts/: build.py
src/parser_images/: __init__.py  __main__.py  cleaner.py  cli.py  config.py  i18n.py  parser.py  queries.txt  settings.json
src/parser_images/utils/: browser.py  download.py  file_ops.py  hashing.py
